maze.lessons.maze.island.IslandMaze.scala.error
Escaper:14: error: '=' expected but identifier found.
def contourne objet(){
              ^Escaper:35: error: illegal start of simple expression
}
^